2.1.2
- P4A_Field with file upload now supports ajax calls to upload/delete the file
- a nicer style for tooltips was added
- a nicer style for popups was added
- ajax calls now block the UI to avoid concurrency troubles
- various error checks were added and ajax error are trapped the right way
- PEAR::File was dropper
- PEAR::File_SWF was dropped, operations on flash files are handled by getid3
- minor internal changes were done

2.1.1
- PEAR::Validate inclusion was moved to P4A_Validate file
- ADODB was updated to 495
- scriptaculous was dropped
- jquery was added
- some XHTML validation bugs were fixed
- PEAR::File 1.3.0RC1 was re-added to P4A PEAR repository
- PEAR::File_SWF was re-added to P4A PEAR repository
- getID3 1.7.7 library was added
- jQuery jqModal/dimensions/jmedia plugin were added to manage the popup and block the background controls
- P4A_File::getasFile() method now supports previewing of audio and video files thanks to jmedia
- P4A_Field::setTooltip(), P4A_Field::getTooltip(), P4A_Label::setTooltip(), P4A_Label::getTooltip() methods were added
- tooltip were implemented using the jqModal jQuery plugin
- an info icon (16x16) was added, used for tooltips
- popup template is now simpler and has a close icon
- P4A_Swf_Object function was dropped
- P4A_Is_Mime_Type_Embeddable function was added
- P4A_Embedded_Player function was added
- a bug in P4A_DB::singleton() method was fixed (thanks to Raffaele Candeliere)

2.1.0
- P4A_Data_Field::setSequence() method can handle null values to disable sequence on field
- the P4A helpers system was introduced (with P4A_Mask::useToolbar(),  P4A_Field::loadSelectByTable(), P4A_Mask::setTableAsSource() and P4A_Frame::anchorTabPane())
- P4A_Mark::setFocus() method now stores only the id of the focused object instead the object itself
- now P4A_Mark::setFocus() also works with AJAX requests

2.0.6
- P4A_Tab_Pane::nextPage() method was added