@@ -115,16 +115,18 @@ function hideLoading()
 function showPopup()
 {
 	p4a_popup = $('#popup');
-	p4a_popup.jqm({modal:true}).jqmShow();
 
+	p4a_popup.css('left', 100000).show();
+	var width = p4a_popup.width();
 	var top = $(window).scrollTop() + (($(window).height() - p4a_popup.height() - 100) / 2) + "px";
 	var left = (($(window).width() - p4a_popup.width()) / 2) + "px";
+	p4a_popup.hide();
 
-	p4a_popup.css('width', p4a_popup.width());
+	p4a_popup.css('width', width);
 	p4a_popup.css('top', top);
 	p4a_popup.css('left', left);
-
 	$('#popupCloseHandler').css('float', 'right');
+	p4a_popup.jqm({modal:true}).jqmShow();
 }
 
 function hidePopup()
