@@ -6,6 +6,7 @@
 - various error checks were added and ajax error are trapped the right way
 - PEAR::File was dropper
 - PEAR::File_SWF was dropped, operations on flash files are handled by getid3
+- popup flickering was removed
 - minor internal changes were done
 
 2.1.1
